[package]
name = "knowledge-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Search engine
next-plaid = "1.0"

# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5", features = ["util", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Arrays
ndarray = { version = "0.16", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
parking_lot = "0.12"
base64 = "0.22"
sysinfo = "0.33"
arc-swap = "1.7"
chrono = { version = "0.4", features = ["serde"] }

# Model support (optional)
next-plaid-onnx = { version = "1.0", optional = true }

# Rate limiting
tower_governor = "0.8"

# OpenAPI / Swagger
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[features]
default = []
openblas = ["next-plaid/openblas"]
accelerate = ["next-plaid/accelerate"]
model = ["dep:next-plaid-onnx"]
cuda = ["model", "next-plaid-onnx/cuda", "next-plaid/cuda"]

[[bin]]
name = "knowledge-api"
path = "src/main.rs"
