[package]
name = "knowledge-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
next-plaid = { version = "1.0", features = ["accelerate"] }
next-plaid-onnx = { version = "1.0", features = ["coreml"] }
ndarray = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

[features]
default = []
postgres = ["sqlx", "tokio"]
